# ComputerGraphics

./: .clang-format  .gitignore  ComputerGraphics.code-workspace  README.md  build.bat  envVars.bat  run.bat
3DMath/: CMakeLists.txt  core.h
CPPMath/: main.cpp
ComputerScience/Algorithms/: main.cpp
ComputerScience/Algorithms/01-Searching/: binary_search.cpp  linear_search_01.cpp
ComputerScience/Algorithms/02-Sorting/: bubble_sort.cpp  heap_sort.cpp  merge_sort.cpp  quick_sort.cpp  selection_sort.cpp
ComputerScience/Basics/: logics.cpp  main.cpp  registers.cpp
ComputerScience/CPP/Concepts/: casting_01.cpp  const.cpp  const_cast_01.cpp  custom_iterator.cpp  destructors_01.cpp  dynamic_cast_01.cpp  exceptions_01.cpp  explicit_01.cpp  explicit_02.cpp  explicit_03.cpp  forward_decleration.cpp  inheritance_01.cpp  initializer_list.cpp  main.cpp  multimap.cpp  multiset.cpp  multithreading1_threads.cpp  multithreading2_threads_functor.cpp  multithreading3_future.cpp  multithreading4_future_primise.cpp  multithreading5_mutex.cpp  multithreading6_condition_variable.cpp  multithreading7_condition_variable.cpp  multithreading8_atomic.cpp  multithreading9_semaphore.cpp  object_slicing.cpp  (+25 more)
ComputerScience/Codility/: task1.cpp  task2.cpp  task3.cpp
ComputerScience/Python/: main.py  maya.py
MayaAPI/: main.cpp
OpenGL/: CMakeLists copy.txt  CMakeLists.txt  build.bat  main.cpp
OpenGL/00.HelloWindow/: 00.HelloWindow.cpp
OpenGL/01.HelloTriangle/: 01.HelloTriangle.cpp
Utah_4600/: CMakeLists.txt
core2/: api2.cpp  api2.h
includes/core/: api.cpp  api.h
libs/: API.lib
(+29 files in other folders)
